--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
    <div class="content">
      <div class="profile-photo">
-      <img src="../pic.jpg" alt="Profile Photo" >
+      <img src="pic.jpg" alt="Profile Photo" >
     </div>
 
   <div class="text-content">
